--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercice23-Revision</title>
+    <link rel="stylesheet" href="/assets/css/font-awesome.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <script defer src="/assets/js/script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="icone"></div>
+    <header class="entete">
+      <img src="/assets/images/entete_opaque.png" alt="image-entete" />
+    </header>
+  </body>
 </html>
